syntax = "proto3";

package com.jalebi.proto;

service JobManagementProtocol {
    rpc registerExecutor (ExecutorRequest) returns (ExecutorResponse) {}
    rpc unregisterExecutor (ExecutorRequest) returns (ExecutorResponse) {}
    rpc startTalk (stream TaskResponse) returns (stream TaskRequest) {}
}

enum ExecutorState {
    NEW = 0;
    REGISTERED = 1;
    RUNNING_JOB = 2;
    IDLE = 3;
    UNREGISTERED = 4;
    ASSUMED_DEAD = 5;
}

enum TaskType {
    LOAD_DATASET = 0;
    BREADTH_FIRST = 1;
    DEPTH_FIRST = 2;
}

message ExecutorRequest {
    string executorId = 1;
}

message ExecutorResponse {
    int64 heartbeatInterval = 1;
}

message TaskRequest {
    TaskType taskType = 1;
}

message TaskResponse {
    string jobId = 1;
    string executorId = 2;
    ExecutorState state = 3;
}